@@ -70,18 +70,19 @@ static void* lookupOpenGLFunctionAddress(const char* functionName, bool* success
     if (target)
         return target;
 
-    target = getProcAddress(makeString(functionName, "ARB").characters8());
+    target = getProcAddress(reinterpret_cast<const char*>(makeString(functionName, "ARB").characters8()));
     if (target)
         return target;
 
-    target = getProcAddress(makeString(functionName, "EXT").characters8());
+    // FIXME: <https://webkit.org/b/143964> OpenGLShims appears to have a dead store if GLES2
+    target = getProcAddress(reinterpret_cast<const char*>(makeString(functionName, "EXT").characters8()));
 
 #if defined(GL_ES_VERSION_2_0)
-    target = getProcAddress(makeString(functionName, "ANGLE").characters8());
+    target = getProcAddress(reinterpret_cast<const char*>(makeString(functionName, "ANGLE").characters8()));
     if (target)
         return target;
 
-    target = getProcAddress(makeString(functionName, "APPLE").characters8());
+    target = getProcAddress(reinterpret_cast<const char*>(makeString(functionName, "APPLE").characters8()));
 #endif
 
     // A null address is still a failure case.
