@@ -1,5 +1,14 @@
 2015-04-20  Joseph Pecoraro  <pecoraro@apple.com>
 
+        Unreviewed Windows build fix after r183031.
+
+        * platform/graphics/OpenGLShims.cpp:
+        (WebCore::lookupOpenGLFunctionAddress):
+        Windows needs an explicit cast converting LChar* to const char*.
+        Also, add a FIXME comment for sketchy behavior.
+
+2015-04-20  Joseph Pecoraro  <pecoraro@apple.com>
+
         Cleanup some StringBuilder use
         https://bugs.webkit.org/show_bug.cgi?id=143550
 
